# data_narrator_mcp

./: .gitignore  .npmrc  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SECURITY.md  insight-digger-mcp.service  insight_digger_mcp.code-workspace  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_bridge.js  test_mcp_tools.py
.cursor/rules/: general-logic.mdc
config/: .env.example  __init__.py  settings.py
docs/: index.md  integration_guide.md  mcp_bridge_guide.md  mcp_bridge_implementation_guide.md  mcp_client_development_plan.md  mcp_server_development_plan.md
docs/api/: http-api.md
docs/components/: orphaned-process-cleanup.md  session-management.md
docs/deployment/: production-deployment.md  troubleshooting.md
docs/integration/: claude-desktop.md
docs/overview/: architecture.md  project-overview.md  project-structure.md
docs/reference/: changelog.md  migration-guide.md
docs/setup/: quick-start.md
mcp_client/: README_REDIS.md  __main__.py  config.py  manager.py  server.py  session_manager.py  test_client.py
scripts/deployment/: deploy.sh
scripts/deployment/nginx/: insight-digger-mcp.conf
scripts/deployment/systemd/: insight-digger-flask-api.service
scripts/setup/: install_dependencies.sh
src/: index.js
src/nodejs/: package.json
src/python/: __init__.py
src/python/insight_digger_mcp/: __init__.py
src/python/insight_digger_mcp/flask_api/: __init__.py  app.py  mcp_manager.py  session_manager.py
src/python/insight_digger_mcp/mcp_server/: __init__.py  server.py
src/python/scripts/: start_flask_api.py  start_mcp_server.py
src/shared/: README.md
tests/: conftest.py
tests/unit/: test_flask_api.py
